Fix responsive layout issues

--- a/app/explore/outlinks.module.scss
+++ b/app/explore/outlinks.module.scss
@@ -15,3 +15,9 @@
     text-decoration: underline;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+}
